import "goby/common/protobuf/option_extensions.proto";
import "goby/common/protobuf/zero_mq_node_config.proto";

package goby.common.protobuf;

message PubSubSocketConfig
{
    optional ZeroMQServiceConfig.Socket publish_socket = 1;
    optional ZeroMQServiceConfig.Socket subscribe_socket = 2;
}
